--- a/transaction_history_app/pubspec.yaml
+++ b/transaction_history_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.4.0
   http: ^1.0.0
+  flutter_spinkit: ^5.1.0
+
 
 dev_dependencies:
   flutter_test:
